--- a/.github/workflows/automation_scrapping.yml
+++ b/.github/workflows/automation_scrapping.yml
@@ -8,6 +8,7 @@ on:
       - main.py
       - utils.py
       - config.py
+      - scrapers/**
   workflow_dispatch:
   schedule:
     - cron: '0 23 * * *'  # UTC 23:00 => 한국 시각 08:00
