메일 환경 변수 수정/검색api가동 수정

--- a/.github/workflows/automation_scrapping.yml
+++ b/.github/workflows/automation_scrapping.yml
@@ -17,9 +17,9 @@ jobs:
     env:
       EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
       EMAIL_RECIPIENT: ${{ vars.EMAIL_RECIPIENT }}
-      EXCHANGE_EMAIL: ${{ secrets.EXCHANGE_EMAIL }}
+      EXCHANGE_EMAIL: ${{ vars.EXCHANGE_EMAIL }}
       EXCHANGE_PASSWORD: ${{ secrets.EXCHANGE_PASSWORD }}
-      EXCHANGE_SERVER: ${{ secrets.EXCHANGE_SERVER }}
+      EXCHANGE_SERVER: ${{ vars.EXCHANGE_SERVER }}
       CI: 'true'
       # Google API 시크릿 추가
       GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
