--- a/.github/workflows/automation_scrapping.yml
+++ b/.github/workflows/automation_scrapping.yml
@@ -2,8 +2,8 @@ name: Package News Scrapping
 
 on:
   workflow_dispatch:  # 수동 실행 트리거 추가
-  schedule:
-    - cron: '0 23 * * *'  # UTC 23:00 => 한국 시각 08:00
+#  schedule:
+#    - cron: '0 23 * * *'  # UTC 23:00 => 한국 시각 08:00
 
 jobs:
   run-container:
